--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -9,3 +9,6 @@ jobs:
     steps: 
       - name: Greet the user
         run: echo "Hello Florin"
+        run: ls -l
+        uses: actions/checkout@v2
+        run: ls -l
