--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Greet the user
-      - run: echo "Hello Florin"
+        run: echo "Hello Florin"
       - run: ls -l
       - uses: actions/checkout@v2
       - run: ls -l
