--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,11 +13,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-       
+      permissions:
+        contents: read
+        pull-requests: write
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -30,3 +32,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+    - run: npm run test
+    - uses: davelosert/vitest-coverage-report-action@v1
+      with:
+        vite-config-path: vite.config.ts
