--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -88,7 +88,7 @@ jobs:
       
     environment:
       name: staging
-      url: "${{ steps.deploy.outputs.webAPPurl }}"
+      url: "${{ steps.deploy.outputs.webAppUrl }}"
 
     steps:
       - uses: actions/checkout@v2
